# data_structure_and_algorithm

./: .gitmodules  CMakeLists.txt  License  README  auto_build.py  auto_build_unix.sh  auto_build_win.bat  gen_project.bat  gen_project.sh  license.txt  readme.md
base/: base.h  file_utility.c  memory_pool.c  memory_pool.h
book_parctise/: CMakeLists.txt  README.md  custom_command.cmd  custom_command.sh
book_parctise/src/: CMakeLists.txt
book_parctise/src/chapter_1/: CMakeLists.txt
book_parctise/src/chapter_1/p1_1/: main.cpp  solution1.c  solution1.h  solution2.c  solution2.h
book_parctise/src/chapter_1/p1_2/: data_type.h  main.cpp  solution1.c  solution1.h  solution2.c  solution2.h
book_parctise/src/chapter_1/p1_4/: main.cpp  process_file.c  process_file.h
book_parctise/src/chapter_2/: CMakeLists.txt
book_parctise/src/chapter_2/c2_4_3/: main.cpp  solution1.h  solution2.c
book_parctise/src/chapter_2/c2_4_4/: binary_search.h  exponentiation.c  main.cpp
book_parctise/src/chapter_2/p2_10/: horner.h  main.cpp
book_parctise/src/chapter_2/p2_13/: is_prime_number.c  main.cpp
book_parctise/src/chapter_2/p2_14/: eratosthenes.c  main.cpp
book_parctise/src/chapter_2/p2_19/: main.cpp
book_parctise/src/chapter_2/p2_7/: main.cpp  solution1.h  solution2.h  solution3.c  solution3.h
book_parctise/src/chapter_3/c3_2_7/: main.cpp  polynomial.h
c/: CMakeLists.txt
c/inc/: array.h  c_dsaa.h  double_list.h  list.h  tree.h
c/run_test/: CMakeLists.txt
c/run_test/array/: run_test_array.cpp  run_test_array.h
c/run_test/double_list/: run_test_double_list.cpp
c/run_test/list/: run_test_list.cpp
c/run_test/tree/: run_test_tree.cpp
c/src/: array.c  double_list.c  list.c  tree.c
cpp/: CMakeLists.txt
cpp/inc/: TArray.h  TDoubleList.h  TList.h  TTree.h
cpp/run_test/: CMakeLists.txt
cpp/run_test/array/: run_test_tarray.cpp  run_test_tarray.h
cpp/run_test/double_list/: run_test_tdouble_list.cpp
cpp/run_test/list/: run_test_tlist.cpp  run_test_tlist.h
cpp/run_test/tree/: run_test_ttree.cpp  run_test_ttree.h
dsaa/: CMakeLists.txt
dsaa/base/: CMakeLists.txt  base.c  base.h  base_all.h  file_utility.c  file_utility.h  memory_pool.c  memory_pool.h  string_convert.h
dsaa/c/: CMakeLists.txt
dsaa/c/inc/: array.h  double_list.h  list.h  tree.h
dsaa/c/src/: array.c  double_list.c  list.c  tree.c
dsaa/cpp/: CMakeLists.txt
dsaa/cpp/inc/: TArray.h  TDoubleList.h  TList.h  TTree.h  cpp_dsaa.h
dsaa/utility/: CMakeLists.txt  performance_test.cpp  performance_test.h  timer.h
example/bracket_syntax_detection/: bracket_syntax_detection.c
example/dijkstra/: dijkstra.c
example/expression_tree/: expression_tree.c
example/prim/: prim.c
example/reverse_polish/: reverse_polish.c
example/topsort/: topsort.c
example/unary_polynomial/: unary_polynomial.c
example/unweight_BFS/: unweight_BFS.c
old/: auto_build_win.bat
old/book_parctise/src/: CMakeLists.txt
old/book_parctise/src/chapter_1/p1_1/: main.cpp  solution1.c
old/book_parctise/src/chapter_1/p1_2/: data_type.h  solution1.h  solution2.c  solution2.h
old/book_parctise/src/chapter_1/p1_4/: process_file.c  process_file.h
old/book_parctise/src/chapter_2/: CMakeLists.txt
old/book_parctise/src/chapter_2/c2_4_3/: main.cpp  solution1.c  solution2.h  solution3.c  solution3.h  solution4.c  solution4.h
old/book_parctise/src/chapter_2/c2_4_4/: binary_search.c  euclidean_algorithm.h  exponentiation.c  exponentiation.h
old/book_parctise/src/chapter_2/p2_10/: horner.c  main.cpp
old/book_parctise/src/chapter_2/p2_13/: is_prime_number.h
old/book_parctise/src/chapter_2/p2_14/: eratosthenes.h  main.cpp
old/book_parctise/src/chapter_2/p2_19/: find_majority_element.c  find_majority_element.h
old/book_parctise/src/chapter_2/p2_7/: solution1.c  solution2.c
old/book_parctise/src/chapter_3/: CMakeLists.txt
old/book_parctise/src/chapter_3/c3_2_7/: main.cpp  polynomial.cpp
old/dsaa/: CMakeLists.txt
old/dsaa/c/inc/: array.h
old/dsaa/c/src/: array.c
old/dsaa/cpp/: CMakeLists.txt
old/dsaa/cpp/inc/: TList.h  TTree.h
old/dsaa/utility/: performance_test.cpp  timer.h
old/run_test/c_array/: run_test_array.cpp
old/run_test/c_list/: run_test_list.cpp
old/run_test/c_tree/: run_test_tree.cpp
old/run_test/cpp_array/: run_test_tarray.cpp
old/run_test/cpp_double_list/: run_test_tdouble_list.cpp
old/run_test/cpp_tree/: run_test_ttree.cpp
run_test/: CMakeLists.txt
run_test/c_array/: run_test_array.cpp
run_test/c_double_list/: run_test_double_list.cpp  run_test_double_list.h
run_test/c_list/: run_test_list.cpp  run_test_list.h
run_test/c_tree/: run_test_tree.cpp  run_test_tree.h
run_test/cpp_array/: run_test_tarray.cpp
run_test/cpp_double_list/: run_test_tdouble_list.cpp  run_test_tdouble_list.h
run_test/cpp_list/: run_test_tlist.cpp
run_test/cpp_tree/: run_test_ttree.cpp
src/dsaa/: array_list.c  array_list.h  avl_tree.c  avl_tree.h  avl_tree_iter.c  avl_tree_iter.h  dsaa.h  graph_adj_list.c  graph_adj_list.h  graph_adj_matrix.c  graph_adj_matrix.h  hash_table.c  hash_table.h  heap.c  heap.h  linked_list.c  linked_list.h  macro.h  queue.c  queue.h  sort.c  sort.h  stack.c  stack.h  tree.c  tree.h  trie.c  trie.h
src/test_utils/: test_utils.cpp  test_utils.h
test/array_list/: unittest_array_list.cpp
test/avl_tree/: unittest_avl_tree.cpp
test/avl_tree_iter/: unittest_avl_tree_iter.cpp
test/graph_adj_list/: unittest_graph_adj_list.cpp
test/graph_adj_matrix/: unittest_graph_adj_matrix.cpp
test/hash_table/: unittest_hash_table.cpp
test/heap/: unittest_heap.cpp
test/linked_list/: unittest_linked_list.cpp
test/queue/: unittest_queue.cpp
test/sort/: unittest_sort.cpp
test/stack/: unittest_stack.cpp
test/tree/: unittest_tree.cpp
test/trie/: unittest_trie.cpp
utility/: CMakeLists.txt  base.c  base.h  macros.h  memory_pool.c  memory_pool.h  performance_test.cpp  performance_test.h  run_test.cpp  run_test.h  timer.h
